use std::collections::HashMap;

use crate::constants::*;
use crate::traits::{CosmicContextExt, FractalRequirementsExt};

// Re-export proto types for orchestration
pub use crate::types::cw_ho::orchestration::v1::*;

impl CosmicContextExt for CosmicContext {
    fn new_context(task_id: String, prompt: &str, recursion_depth: u32) -> CosmicContext {
        CosmicContext {
            task_id,
            user_input: prompt.to_string(),
            current_step: 0,
            total_steps: recursion_depth,
            fractal_level: 0,
            golden_ratio_state: 1.618.to_string(),
            previous_responses: Vec::new(),
            cosmic_metadata: HashMap::new(),
        }
    }
    type CosmicContext = CosmicContext;
}

impl FractalRequirementsExt for FractalRequirements {
    type FractalRequirements = FractalRequirements;
    fn new_default() -> Self::FractalRequirements {
        FractalRequirements {
            context: None,
            recursion_depth: DEFAULT_RECURSION_DEPTH,
            self_similarity_threshold: 0.618, // the "goldenâ€‘ratio" similarity
            golden_ratio_compliance: true,
            fractal_dimension_target: 2.0,
            mobius_continuity: true,
            fractal_coherence: 0.8,
            expansion_criteria: vec![
                GOLDEN_RATIO_SCALING.into(),
                TETRAHEDRAL_CONNECTIVITY.into(),
                FRACTAL_RECURSION.into(),
            ],
        }
    }
}

// /// Execute recursive orchestration task
// pub async fn execute_recursive_orchestration_task(
//     executor: &PythonExecutor,
//     task: &AgentTask,
// ) -> Result<serde_json::Value> {
//     info!("ðŸŒ€ Executing recursive orchestration - the infinite fractal engine!");

//     // This is where recursion becomes the infinite fractal engine
//     let recursion_depth = task
//         .payload
//         .get("recursion_depth")
//         .and_then(|v| v.as_u64())
//         .unwrap_or(5) as u32;

//     let mut orchestration_results = Vec::new();

//     // Recursive execution following fractal principles
//     for depth in 0..recursion_depth {
//         info!(
//             "ðŸ”„ Fractal recursion level: {}/{}",
//             depth + 1,
//             recursion_depth
//         );

//         // Execute Python orchestration at this fractal level
//         let result = executor.execute_orchestration_sequence(task).await?;
//         orchestration_results.push(result);

//         // Apply golden ratio scaling for next level
//         if depth < recursion_depth - 1 {
//             tokio::time::sleep(std::time::Duration::from_millis(
//                 ((depth as f64) * 618.0) as u64, // Golden ratio timing
//             ))
//             .await;
//         }
//     }

//     Ok(serde_json::json!({
//         "recursion_levels": orchestration_results,
//         "fractal_depth_achieved": recursion_depth,
//         "cosmic_orchestration_complete": true
//     }))
// }

// /// Execute fractal agent creation task
// pub async fn execute_fractal_agent_creation_task(
//     executor: &PythonExecutor,
//     task: &AgentTask,
// ) -> Result<serde_json::Value> {
//     info!("ðŸŽ­ Creating fractal AI agents through recursive expansion!");

//     // Base agent specification from task payload
//     let base_spec = AgentSpec {
//         agent_id: task.id.to_string(),
//         agent_type: task
//             .payload
//             .get("agent_type")
//             .and_then(|v| v.as_str())
//             .unwrap_or("CosmicOrchestrator")
//             .to_string(),
//         capabilities: task
//             .payload
//             .get("capabilities")
//             .and_then(|v| v.as_array())
//             .map(|arr| {
//                 arr.iter()
//                     .filter_map(|v| v.as_str().map(String::from))
//                     .collect()
//             })
//             .unwrap_or_else(|| vec!["cosmic-orchestration".to_string()]),
//         execution_prompt: task
//             .payload
//             .get("execution_prompt")
//             .and_then(|v| v.as_str())
//             .unwrap_or("Execute cosmic orchestration with fractal awareness")
//             .to_string(),
//         tetrahedral_position: task
//             .payload
//             .get("tetrahedral_position")
//             .and_then(|v| v.as_str())
//             .unwrap_or("Development")
//             .to_string(),
//         fractal_properties: HashMap::new(),
//     };

//     let recursion_depth = task
//         .payload
//         .get("recursion_depth")
//         .and_then(|v| v.as_u64())
//         .unwrap_or(4) as u32;

//     let fractal_agents = executor
//         .create_fractal_agents(&base_spec, recursion_depth)
//         .await?;

//     info!(
//         "âœ¨ Created {} fractal agents through recursive expansion!",
//         fractal_agents.len()
//     );

//     Ok(serde_json::json!({
//         "created_agents": fractal_agents,
//         "base_agent": base_spec,
//         "fractal_expansion_complete": true,
//         "recursion_depth": recursion_depth
//     }))
// }
